2009-02-09  Dirk Schulze  <krit@webkit.org>

Reviewed by Eric Seidel.

        Transform the gradient instead of the context for most platforms and
        transform the context after CGContextReplacePathWithStrokedPath for CG.

        REGRESSION: SVG gradient transformation/BoundingBox can cause ugly stroke thickness
        https://bugs.webkit.org/show_bug.cgi?id=23547

        * platform/graphics/Gradient.h:
        (WebCore::Gradient::setGradientSpaceTransform):
        (WebCore::Gradient::gradientSpaceTransform):
        * platform/graphics/cairo/GradientCairo.cpp:
        (WebCore::Gradient::platformGradient):
        * platform/graphics/cg/GraphicsContextCG.cpp:
        (WebCore::GraphicsContext::fillPath):
        (WebCore::GraphicsContext::strokePath):
        (WebCore::GraphicsContext::fillRect):
        * platform/graphics/qt/GraphicsContextQt.cpp:
        (WebCore::GraphicsContext::fillPath):
        (WebCore::GraphicsContext::strokePath):
        (WebCore::GraphicsContext::fillRect):
        * platform/graphics/skia/GradientSkia.cpp:
        (WebCore::Gradient::platformGradient):
        * svg/graphics/SVGPaintServerGradient.cpp:
        (WebCore::SVGPaintServerGradient::SVGPaintServerGradient):
        (WebCore::clipToTextMask):
        (WebCore::SVGPaintServerGradient::setup):
        (WebCore::SVGPaintServerGradient::teardown):


Canonical link: https://commits.webkit.org/32921@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@40795 268f45cc-cd09-0410-ab3c-d52691b4dbfc