WebCore/platform/graphics/Gradient.h
@@ -30,6 +30,7 @@
 #include "FloatPoint.h"
 #include "Generator.h"
 #include "GraphicsTypes.h"
+#include "TransformationMatrix.h"
 #include <wtf/PassRefPtr.h>
 #include <wtf/Vector.h>
 
@@ -89,6 +90,9 @@ namespace WebCore {
 
         void setSpreadMethod(GradientSpreadMethod);
         GradientSpreadMethod spreadMethod() { return m_spreadMethod; }
+        void setGradientSpaceTransform(const TransformationMatrix& gradientSpaceTransformation) { m_gradientSpaceTransformation = gradientSpaceTransformation; }
+        // Qt and CG transform the gradient at draw time
+        TransformationMatrix gradientSpaceTransform() { return m_gradientSpaceTransformation; }
 
         virtual void fill(GraphicsContext*, const FloatRect&);
 
@@ -110,6 +114,7 @@ namespace WebCore {
         mutable bool m_stopsSorted;
         mutable int m_lastStop;
         GradientSpreadMethod m_spreadMethod;
+        TransformationMatrix m_gradientSpaceTransformation;
 
         PlatformGradient m_gradient;
     };
